--- a/index.html
+++ b/index.html
@@ -1,14 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
+
 <body>
-    <p>
-        edit
-    </p>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <li>
+                    <a href=""> About Us </a>
+                </li>
+                <li>
+                    <a href=""> Contacts </a>
+                </li>
+                <li>
+                    <a href=""> Track Order </a>
+                </li>
+            </div>
+            <div class="col">
+                <span class="header-text">
+                    AUTO PARTS FOR CARS, TRUCKS AND MOTORCYCLES
+                </span>
+            </div>
+            <div class="col">
+                <li>
+                    
+                </li>
+                <li></li>
+                <li></li>
+            </div>
+        </div>
+    </div>
+    </div>
 </body>
+
 </html>
