--- a/index.html
+++ b/index.html
@@ -10,33 +10,38 @@
 </head>
 
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <li>
-                    <a href=""> About Us </a>
-                </li>
-                <li>
-                    <a href=""> Contacts </a>
-                </li>
-                <li>
-                    <a href=""> Track Order </a>
-                </li>
-            </div>
-            <div class="col">
-                <span class="header-text">
-                    AUTO PARTS FOR CARS, TRUCKS AND MOTORCYCLES
-                </span>
-            </div>
-            <div class="col">
-                <li>
-                    
-                </li>
-                <li></li>
-                <li></li>
+    <div class="row-header">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+                    <li>
+                        <a href=""> About Us </a>
+                    </li>
+                    <li>
+                        <a href=""> Contacts </a>
+                    </li>
+                    <li>
+                        <a href=""> Track Order </a>
+                    </li>
+                </div>
+                <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+                    <span class="header-text">
+                        AUTO PARTS FOR CARS, TRUCKS AND MOTORCYCLES
+                    </span>
+                </div>
+                <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+                    <li>
+                        <a href="">Compare: <span class="header-text">5</span></a>
+                    </li>
+                    <li>
+                        <a href="">Currrency: <span class="header-text">USD</span></a>
+                    </li>
+                    <li>
+                        <a href="">Language: <span class="header-text">EN</span></a>
+                    </li>
+                </div>
             </div>
         </div>
-    </div>
     </div>
 </body>
 
